--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
 
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
-        <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+        <p class="my-4 h6">
+           Profesora de inglés con más de 10 años de experiencia. <br>Amante de desenvolverme en diferentes actividades y de aprender nuevas cosas que pueda relacionar con mi profesión.
         </p>
 
 
