--- a/index.html
+++ b/index.html
@@ -98,19 +98,16 @@
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis actividades</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
+                    <div class=""><div class="image-top" style="background-image: url(assets/img/Profesora.JPG)"></div></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">Enseñar</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            Actividad principal que realizo durante los semana. Enseño a niños y adolescentes entre lo 8 a los 14 años. 
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -120,14 +117,11 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/Comida.JPG)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">Cocinar</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            A veces por gusto, a veces por obligación, esta es la segunda actividad que más realizo durante mi semana. Junto con ello, intento estudiar y buscar nuevas recetas para ir perfeccionándome día a día.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -137,14 +131,11 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/the\ legend\ of\ zelda.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Jugar</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            Además de entretener, me gusta jugar porque desarrollo otras habilidades que no practico en otras tareas, por ejemplo la lógica, el trabajo en equipo, la paciencia, entre otras.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
