Modifiqué la descripción del banner

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     Profesora de inglés <br> multifacética
                 </h1>
                 <p class="my-5 h5">
-                    Profesora de Inglés, bordadora, cocinera y amante de los videojuegos
+                    Profesora de Inglés, cocinera y amante de los videojuegos
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
