--- a/index.html
+++ b/index.html
@@ -153,11 +153,7 @@
 
         <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
-        <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Doloribus
-            sapiente, autem delectus totam expedita
-            animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae
-            tempora quaerat?</p>
+        <p class="text-center my-4 d-none d-md-block"> Si quieres tomar clases conmigo de una manera didáctica y multitemática o si tienes dudas de mi metodología o valores, te invito a que me contactes.</p>
 
         <form>
 
@@ -191,7 +187,7 @@
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Rita Valenzuela 2024. Todos los derechos reservados.</p>
     </footer>
 
 
