--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
         </div>
     </nav>
 
-    <header id="Hero-Section" class="text-light text-end py-5 mt-5">
+    <header id="Hero-Section" class="text-end text-dark py-5 mt-5">
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    Profesora de inglés <br> multifacética
+                Profesora de inglés <br> multifacética
                 </h1>
                 <p class="my-5 h5">
                     Profesora de Inglés, cocinera y amante de los videojuegos
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
+                    <button class="btn btn-lg btn-info text-light">Trabajos</button>
                     <button class="btn btn-lg btn-info text-light">Contacto</button>
                 </div>
             </div>
